# notification_service

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
docs/: README.md  architecture.md  data-catalog.md  operations.md  queue-design.md  service.md
migrations/: 001_create_notifications.sql  002_create_notification_outbox.sql  003_create_notification_attempts.sql
src/: app.rs  config.rs  lib.rs  main.rs
src/application/: mod.rs
src/application/command/: create_notification.rs  send_notification.rs
src/application/port/: message_broker.rs  notification_repository.rs  notification_sender.rs  outbox_repository.rs
src/application/service/: notification_service.rs  outbox_publisher.rs
src/domain/: mod.rs  notification.rs  notification_channel.rs  notification_status.rs
src/infrastructure/: mod.rs
src/infrastructure/postgres/: mod.rs  notification_repository_pg.rs  outbox_repository_pg.rs
src/infrastructure/provider/: email_sender.rs  in_app_sender.rs  mod.rs  push_sender.rs  whatsapp_sender.rs
src/infrastructure/rabbitmq/: consumer.rs  publisher.rs
src/interface/: mod.rs
src/interface/http/: dto.rs  handler.rs  route.rs
src/interface/worker/: notification_worker.rs  outbox_worker.rs
src/shared/: error.rs  logger.rs
tests/: domain.rs  http.rs  outbox.rs  providers.rs  service.rs  worker.rs
tests/common/: mod.rs
