[package]
name = "notification_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lapin = "3"
thiserror = "2"
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
async-trait = "0.1"
futures-lite = "2"

[package.metadata.coverage]
unit-test-command = "cargo llvm-cov --summary-only --ignore-filename-regex '(^|/)(tests/|src/(app|main|config)\\.rs|src/infrastructure/(postgres|rabbitmq)/|src/interface/worker/|src/application/service/outbox_publisher\\.rs|src/shared/logger\\.rs)' --fail-under-lines 90"
